Fix loadout modules not visible

--- a/application/src/main/resources/sass/default/application-screen/odyssey/_loadout.scss
+++ b/application/src/main/resources/sass/default/application-screen/odyssey/_loadout.scss
@@ -142,6 +142,8 @@
                 -fx-background-color: $background-color-dark;
                 -fx-padding: 0.25em;
                 @include hvGap(0.25em);
+                @include fixedHeight(31em);
+                //-fx-fit-to-height: true;
               }
 
               .name {
